<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/signInLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.400">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:ems="14"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="password"
            android:ems="14"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_button_darker"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="?colorOnPrimary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSwitchToSignUp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/switch_to_sign_up"
            android:textAllCaps="false"
            android:textColor="@color/secondary_option"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSignInGoogle"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:padding="12dp"
        android:text="@string/sign_in_google"
        android:textAllCaps="false"
        android:textColor="?colorPrimary"
        android:textSize="18sp"
        app:icon="@drawable/ic_google_24"
        app:iconPadding="12dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/signInLayout"
        app:layout_constraintStart_toStartOf="@+id/signInLayout"
        app:layout_constraintTop_toBottomOf="@+id/signInLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>