<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.MainMenuFragment">

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_sans"
        tools:text="Version: 2.0.0"
        android:padding="4dp"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/background_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivUser"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginVertical="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/desc_profile_image"
            android:src="@drawable/ic_round_account_circle_24"
            app:tint="?colorOnSecondary"
            app:layout_constraintBottom_toBottomOf="@+id/btnSignIn"
            app:layout_constraintEnd_toStartOf="@+id/tvProfileName"
            app:layout_constraintStart_toStartOf="@+id/btnSignIn"
            app:layout_constraintTop_toTopOf="@+id/btnSignIn" />

        <TextView
            android:id="@+id/tvProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fira_sans_medium"
            android:includeFontPadding="false"
            android:text="@string/sign_in_underlined"
            android:layout_marginEnd="12dp"
            android:textColor="?colorOnSecondary"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnSignIn"
            app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
            app:layout_constraintTop_toTopOf="@+id/btnSignIn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSingleplayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@drawable/background_button_secondary"
        android:fontFamily="@font/fira_sans_bold"
        android:padding="8dp"
        android:text="@string/singleplayer"
        android:textAllCaps="false"
        android:textColor="?colorOnSecondary"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMultiplayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@drawable/background_button_secondary"
        android:fontFamily="@font/fira_sans_bold"
        android:padding="8dp"
        android:text="@string/multiplayer"
        android:textAllCaps="false"
        android:textColor="?colorOnSecondary"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@drawable/background_button_secondary"
        android:fontFamily="@font/fira_sans_bold"
        android:padding="8dp"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="?colorOnSecondary"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/layoutButtonsHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:divider="@drawable/empty_horizontal_divider"
        android:showDividers="middle">

        <ImageButton
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_button_secondary"
            android:contentDescription="@string/desc_exit"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp"
            android:src="@drawable/ic_round_exit_to_app_24"
            app:tint="?colorOnSecondary" />

        <ImageButton
            android:id="@+id/btnLeaderboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_button_secondary"
            android:contentDescription="@string/desc_leaderboard"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp"
            android:src="@drawable/ic_round_leaderboard_24"
            app:tint="?colorOnSecondary" />

        <ImageButton
            android:id="@+id/btnSocials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_button_secondary"
            android:contentDescription="@string/desc_socials"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp"
            android:src="@drawable/ic_github_24"
            app:tint="?colorOnSecondary" />
    </LinearLayout>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_sans_bold"
        android:includeFontPadding="false"
        android:text="@string/welcome"
        android:textColor="?colorOnPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_sans_bold"
        android:includeFontPadding="false"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="?colorOnPrimary"
        android:textSize="72sp" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:constraint_referenced_ids="welcome,title"
        app:flow_verticalGap="4dp"
        app:layout_constraintBottom_toTopOf="@+id/flowButtonsVertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.400" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flowButtonsVertical"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:constraint_referenced_ids="btnSingleplayer,btnMultiplayer,btnSettings,layoutButtonsHorizontal"
        app:flow_verticalGap="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>