<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/etInviteCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/invite_code"
        android:fontFamily="@font/montserrat_medium"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="?colorOnPrimary" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnJoinLobby"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_secondary"
        android:fontFamily="@font/fira_sans_bold"
        android:padding="8dp"
        android:text="@string/join_lobby"
        android:textAllCaps="false"
        android:textColor="?colorOnSecondary"
        android:textSize="20sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateLobby"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_secondary"
        android:fontFamily="@font/fira_sans_bold"
        android:padding="8dp"
        android:text="@string/create_lobby"
        android:textAllCaps="false"
        android:textColor="?colorOnSecondary"
        android:textSize="20sp" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:flow_verticalGap="8dp"
        app:constraint_referenced_ids="etInviteCode,btnJoinLobby,btnCreateLobby"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>